laborations/lab2/testsuite/good/subtyping/cmp_if_double_lt_int.cc
int main () {
	if (3.0 < 5)
		int y;
	else {}
	return 0;
}
