laborations/lab2/testsuite/bad/bad/cmp_if_double_lt_bool.cc
int main () {
	if (5.324 < true) { } else { }
  return 0;
}
